// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-timepicker Hide internal error messages 1`] = `
<div>
  
        Min time 8:45, Max Time 15:15 
  <br />
   
  <div
    class="m-timepicker"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--is-label-up m--has-label m--has-value m--is-tag-default"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mTimepicker-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Enter time
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-controls="mTimepicker-fakeId-controls"
                aria-haspopup="true"
                id="mTimepicker-fakeId"
                inputmode="decimal"
                max="15:15"
                min="8:45"
                placeholder="HH:MM"
                step="300"
                type="text"
              />
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-controls="mTimepicker-fakeId"
                class="m-icon-button m--is-skin-light m--has-ripple"
                style="width: 22px; height: 22px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-validation-message m-timepicker__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   model value = 12:05
</div>
`;

exports[`Storyshots modul-components|m-timepicker Skip internal validations 1`] = `
<div>
  
        Min time 8:45, Max Time 15:15 
  <br />
   
  <div
    class="m-timepicker"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--is-label-up m--has-label m--has-value m--is-tag-default"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mTimepicker-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Enter time
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-controls="mTimepicker-fakeId-controls"
                aria-haspopup="true"
                id="mTimepicker-fakeId"
                inputmode="decimal"
                max="15:15"
                min="8:45"
                placeholder="HH:MM"
                step="300"
                type="text"
              />
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-controls="mTimepicker-fakeId"
                class="m-icon-button m--is-skin-light m--has-ripple"
                style="width: 22px; height: 22px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-validation-message m-timepicker__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
  
                                model value = 12:05
</div>
`;

exports[`Storyshots modul-components|m-timepicker default 1`] = `
<div
  class="m-timepicker"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--is-tag-default"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-controls="mTimepicker-fakeId-controls"
              aria-haspopup="true"
              id="mTimepicker-fakeId"
              inputmode="decimal"
              max="23:59"
              min="00:00"
              placeholder="HH:MM"
              step="300"
              type="text"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-controls="mTimepicker-fakeId"
              class="m-icon-button m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-validation-message m-timepicker__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-timepicker label 1`] = `
<div
  class="m-timepicker"
  style="width: 100%; max-width: 288px;"
>
  <div
    class="m-input-style m--has-label m--is-tag-default"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mTimepicker-fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Activity start time
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-controls="mTimepicker-fakeId-controls"
              aria-haspopup="true"
              id="mTimepicker-fakeId"
              inputmode="decimal"
              max="23:59"
              min="00:00"
              placeholder="HH:MM"
              step="300"
              type="text"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-controls="mTimepicker-fakeId"
              class="m-icon-button m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-validation-message m-timepicker__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-timepicker label-up 1`] = `
<div
  class="m-timepicker"
  style="width: 100%; max-width: 592px;"
>
  <div
    class="m-input-style m--is-label-up m--has-label m--is-tag-default"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mTimepicker-fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Activity start time
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-controls="mTimepicker-fakeId-controls"
              aria-haspopup="true"
              id="mTimepicker-fakeId"
              inputmode="decimal"
              max="23:59"
              min="00:00"
              placeholder="HH:MM"
              step="300"
              type="text"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-controls="mTimepicker-fakeId"
              class="m-icon-button m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-validation-message m-timepicker__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-timepicker max widht 1`] = `
<div
  class="m-timepicker"
  style="width: 100%; max-width: 896px;"
>
  <div
    class="m-input-style m--is-tag-default"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-controls="mTimepicker-fakeId-controls"
              aria-haspopup="true"
              id="mTimepicker-fakeId"
              inputmode="decimal"
              max="23:59"
              min="00:00"
              placeholder="HH:MM"
              step="300"
              type="text"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-controls="mTimepicker-fakeId"
              class="m-icon-button m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-validation-message m-timepicker__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-timepicker min 8:45 / max 15:15 1`] = `
<div
  class="m-timepicker"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--has-value m--is-tag-default"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-controls="mTimepicker-fakeId-controls"
              aria-haspopup="true"
              id="mTimepicker-fakeId"
              inputmode="decimal"
              max="15:15"
              min="8:45"
              placeholder="HH:MM"
              step="300"
              type="text"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-controls="mTimepicker-fakeId"
              class="m-icon-button m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-validation-message m-timepicker__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-timepicker reactivity 1`] = `
<div>
  <div
    class="m-timepicker"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--is-tag-default"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-controls="mTimepicker-fakeId-controls"
                aria-haspopup="true"
                id="mTimepicker-fakeId"
                inputmode="decimal"
                max="23:59"
                min="00:00"
                placeholder="HH:MM"
                step="300"
                type="text"
              />
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-controls="mTimepicker-fakeId"
                class="m-icon-button m--is-skin-light m--has-ripple"
                style="width: 22px; height: 22px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-validation-message m-timepicker__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-timepicker"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--is-tag-default"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-controls="mTimepicker-fakeId-controls"
                aria-haspopup="true"
                id="mTimepicker-fakeId"
                inputmode="decimal"
                max="23:59"
                min="00:00"
                placeholder="HH:MM"
                step="300"
                type="text"
              />
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-controls="mTimepicker-fakeId"
                class="m-icon-button m--is-skin-light m--has-ripple"
                style="width: 22px; height: 22px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-validation-message m-timepicker__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-timepicker required 1`] = `
<div
  class="m-timepicker"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--has-label m--is-tag-default"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mTimepicker-fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Time
            </span>
             
            <sup
              class="m-input-style__required-marker"
            >
              *
            </sup>
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-controls="mTimepicker-fakeId-controls"
              aria-haspopup="true"
              id="mTimepicker-fakeId"
              inputmode="decimal"
              max="23:59"
              min="00:00"
              placeholder="HH:MM"
              step="300"
              type="text"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-controls="mTimepicker-fakeId"
              class="m-icon-button m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-validation-message m-timepicker__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-timepicker state 1`] = `
<div>
  <div
    class="m-timepicker m--is-disabled"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--is-label-up m--is-disabled m--has-label m--has-value m--is-tag-default"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mTimepicker-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Disabled
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-controls="mTimepicker-fakeId-controls"
                aria-haspopup="true"
                disabled="disabled"
                id="mTimepicker-fakeId"
                inputmode="decimal"
                max="23:59"
                min="00:00"
                placeholder="HH:MM"
                step="300"
                type="text"
              />
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-controls="mTimepicker-fakeId"
                class="m-icon-button m--is-skin-light m--has-ripple m--is-disabled"
                disabled="disabled"
                style="width: 22px; height: 22px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-validation-message m-timepicker__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-timepicker m--is-readonly"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--is-readonly m--is-label-up m--has-label m--has-value m--is-tag-default"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mTimepicker-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Readonly
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-controls="mTimepicker-fakeId-controls"
                aria-haspopup="true"
                id="mTimepicker-fakeId"
                inputmode="decimal"
                max="23:59"
                min="00:00"
                placeholder="HH:MM"
                readonly="readonly"
                step="300"
                type="text"
              />
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-controls="mTimepicker-fakeId"
                class="m-icon-button m--is-skin-light m--has-ripple m--is-disabled"
                disabled="disabled"
                style="width: 22px; height: 22px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-validation-message m-timepicker__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-timepicker"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--is-label-up m--is-waiting m--has-label m--has-value m--is-tag-default"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mTimepicker-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Waiting
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-controls="mTimepicker-fakeId-controls"
                aria-haspopup="true"
                id="mTimepicker-fakeId"
                inputmode="decimal"
                max="23:59"
                min="00:00"
                placeholder="HH:MM"
                step="300"
                type="text"
              />
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-controls="mTimepicker-fakeId"
                class="m-icon-button m--is-skin-light m--has-ripple"
                style="width: 22px; height: 22px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <div
                class="m-spinner m-input-style__spinner"
              >
                <!---->
                 
                <div />
              </div>
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-validation-message m-timepicker__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
  <br />
   
  <div
    class="m-timepicker m--is-disabled"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--is-label-up m--is-disabled m--has-label m--has-value m--is-tag-default"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mTimepicker-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Disabled
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-controls="mTimepicker-fakeId-controls"
                aria-haspopup="true"
                disabled="disabled"
                id="mTimepicker-fakeId"
                inputmode="decimal"
                max="23:59"
                min="00:00"
                placeholder="HH:MM"
                step="300"
                type="text"
              />
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-controls="mTimepicker-fakeId"
                class="m-icon-button m--is-skin-light m--has-ripple m--is-disabled"
                disabled="disabled"
                style="width: 22px; height: 22px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-validation-message m-timepicker__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-timepicker m--is-readonly m--has-validation-message"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--is-readonly m--is-label-up m--has-error m--has-label m--has-value m--is-tag-default"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mTimepicker-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Readonly
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-controls="mTimepicker-fakeId-controls"
                aria-haspopup="true"
                id="mTimepicker-fakeId"
                inputmode="decimal"
                max="23:59"
                min="00:00"
                placeholder="HH:MM"
                readonly="readonly"
                step="300"
                type="text"
              />
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-controls="mTimepicker-fakeId"
                class="m-icon-button m--is-skin-light m--has-ripple m--is-disabled"
                disabled="disabled"
                style="width: 22px; height: 22px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-validation-message m-timepicker__validation-message"
    >
      <p
        class="m-validation-message__error"
      >
        <svg
          class="m-icon m-validation-message__icon"
          height="1em"
          width="1em"
        >
          <title>
            Erreur
          </title>
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <span
          class="m-validation-message__text"
        >
          Error
        </span>
      </p>
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-timepicker m--has-validation-message"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--is-label-up m--is-waiting m--has-error m--has-label m--has-value m--is-tag-default"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mTimepicker-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Waiting
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-controls="mTimepicker-fakeId-controls"
                aria-haspopup="true"
                id="mTimepicker-fakeId"
                inputmode="decimal"
                max="23:59"
                min="00:00"
                placeholder="HH:MM"
                step="300"
                type="text"
              />
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-controls="mTimepicker-fakeId"
                class="m-icon-button m--is-skin-light m--has-ripple"
                style="width: 22px; height: 22px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <div
                class="m-spinner m-input-style__spinner"
              >
                <!---->
                 
                <div />
              </div>
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-validation-message m-timepicker__validation-message"
    >
      <p
        class="m-validation-message__error"
      >
        <svg
          class="m-icon m-validation-message__icon"
          height="1em"
          width="1em"
        >
          <title>
            Erreur
          </title>
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <span
          class="m-validation-message__text"
        >
          Error
        </span>
      </p>
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
  <br />
   
  <div
    class="m-timepicker m--is-disabled m--is-readonly"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--is-readonly m--is-label-up m--is-disabled m--has-label m--has-value m--is-tag-default"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mTimepicker-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Disabled and readonly
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-controls="mTimepicker-fakeId-controls"
                aria-haspopup="true"
                disabled="disabled"
                id="mTimepicker-fakeId"
                inputmode="decimal"
                max="23:59"
                min="00:00"
                placeholder="HH:MM"
                readonly="readonly"
                step="300"
                type="text"
              />
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-controls="mTimepicker-fakeId"
                class="m-icon-button m--is-skin-light m--has-ripple m--is-disabled"
                disabled="disabled"
                style="width: 22px; height: 22px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-validation-message m-timepicker__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-timepicker m--is-disabled"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--is-label-up m--is-disabled m--is-waiting m--has-label m--has-value m--is-tag-default"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mTimepicker-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Disabled and waiting
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-controls="mTimepicker-fakeId-controls"
                aria-haspopup="true"
                disabled="disabled"
                id="mTimepicker-fakeId"
                inputmode="decimal"
                max="23:59"
                min="00:00"
                placeholder="HH:MM"
                step="300"
                type="text"
              />
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-controls="mTimepicker-fakeId"
                class="m-icon-button m--is-skin-light m--has-ripple m--is-disabled"
                disabled="disabled"
                style="width: 22px; height: 22px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <div
                class="m-spinner m-input-style__spinner"
              >
                <!---->
                 
                <div />
              </div>
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-validation-message m-timepicker__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-timepicker m--is-readonly"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--is-readonly m--is-label-up m--is-waiting m--has-label m--has-value m--is-tag-default"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mTimepicker-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Readonly and waiting
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-controls="mTimepicker-fakeId-controls"
                aria-haspopup="true"
                id="mTimepicker-fakeId"
                inputmode="decimal"
                max="23:59"
                min="00:00"
                placeholder="HH:MM"
                readonly="readonly"
                step="300"
                type="text"
              />
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-controls="mTimepicker-fakeId"
                class="m-icon-button m--is-skin-light m--has-ripple m--is-disabled"
                disabled="disabled"
                style="width: 22px; height: 22px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <div
                class="m-spinner m-input-style__spinner"
              >
                <!---->
                 
                <div />
              </div>
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-validation-message m-timepicker__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-timepicker m--is-disabled m--is-readonly"
    style="width: 100%; max-width: 136px;"
  >
    <div
      class="m-input-style m--is-readonly m--is-label-up m--is-disabled m--is-waiting m--has-label m--has-value m--is-tag-default"
      style="margin-top: 10px;"
    >
      <div
        class="m-input-style__main"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mTimepicker-fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Disabled, readonly and waiting
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <input
                aria-controls="mTimepicker-fakeId-controls"
                aria-haspopup="true"
                disabled="disabled"
                id="mTimepicker-fakeId"
                inputmode="decimal"
                max="23:59"
                min="00:00"
                placeholder="HH:MM"
                readonly="readonly"
                step="300"
                type="text"
              />
                
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <button
                aria-controls="mTimepicker-fakeId"
                class="m-icon-button m--is-skin-light m--has-ripple m--is-disabled"
                disabled="disabled"
                style="width: 22px; height: 22px;"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="m-icon m-icon-button__icon"
                  height="20px"
                  width="20px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
                 
                <!---->
              </button>
               
              <div
                class="m-spinner m-input-style__spinner"
              >
                <!---->
                 
                <div />
              </div>
            </div>
          </div>
        </div>
         
        <!---->
      </div>
    </div>
     
    <div
      class="m-validation-message m-timepicker__validation-message"
    >
      <!---->
       
      <!---->
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-timepicker step 15m 1`] = `
<div
  class="m-timepicker"
  style="width: 100%; max-width: 136px;"
>
  <div
    class="m-input-style m--is-tag-default"
    style="margin-top: 10px;"
  >
    <div
      class="m-input-style__main"
    >
      <div
        class="m-input-style__body"
      >
        <span
          class="m-input-style__label"
          style="z-index: -1;"
        >
          <span
            class="m-input-style__text"
          />
        </span>
         
        <div
          class="m-input-style__input"
        >
          <div
            class="m-input-style__prefix"
          />
           
          <div
            class="m-input-style__content"
          >
            <input
              aria-controls="mTimepicker-fakeId-controls"
              aria-haspopup="true"
              id="mTimepicker-fakeId"
              inputmode="decimal"
              max="23:59"
              min="00:00"
              placeholder="HH:MM"
              step="900"
              type="text"
            />
              
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <button
              aria-controls="mTimepicker-fakeId"
              class="m-icon-button m--is-skin-light m--has-ripple"
              style="width: 22px; height: 22px;"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-icon-button__icon"
                height="20px"
                width="20px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <!---->
            </button>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
   
  <div
    class="m-validation-message m-timepicker__validation-message"
  >
    <!---->
     
    <!---->
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;
